--- a/index.html
+++ b/index.html
@@ -74,11 +74,12 @@ I take pride in writing thoughtful code—and being a reliable teammate who brin
 					<li><span class="iconify" data-icon="logos:postgresql"></span>PostgreSQL</li>
 					<li><span class="iconify" data-icon="devicon:mysql"></span>MySQL</li>
 					<li><span class="iconify" data-icon="devicon:mongodb"></span>MongoDB</li>
+					<li><span class="iconify" data-icon="material-icon-theme:prisma"></span>Prisma</li>
 					<li><span class="iconify" data-icon="devicon:vitest"></span>Vitest</li>
 					<li><span class="iconify" data-icon="logos:aws"></span>AWS</li>
 					<li><span class="iconify" data-icon="logos:google-cloud"></span>GoogleCloud</li>
 					<li><span class="iconify" data-icon="logos:websocket"></span>WebSocket</li>
-
+					<li><span class="iconify" data-icon="skill-icons:docker"></span>Docker</li>
 
 					<li><span class="iconify" data-icon="simple-icons:reactquery"></span>ReactQuery</li>		
 	
@@ -89,14 +90,16 @@ I take pride in writing thoughtful code—and being a reliable teammate who brin
 					<li><span class="iconify" data-icon="logos:git-icon"></span>Git</li>
 					<li><span class="iconify" data-icon="logos:hugging-face-icon"></span>HuggingFace</li>
 					<li><span class="iconify" data-icon="simple-icons:ollama"></span>Ollama</li>
-					<li><span class="iconify" data-icon="logos:zod"></span>Zod</li>
+
+					
+					<li><span class="iconify" data-icon="logos:jquery"></span>JQuery</li>
+					<li><span class="iconify" data-icon="logos:css-3"></span>CSS3</li>
 					<li><span class="iconify" data-icon="logos:d3"></span>D3</li>
+					<li><span class="iconify" data-icon="logos:html-5"></span>HTML5</li>
 					<li><span class="iconify" data-icon="simple-icons:mui"></span>MUI</li>
 					<li><span class="iconify" data-icon="logos:tailwindcss-icon"></span>TailwindCSS</li>
 					<li><span class="iconify" data-icon="simple-icons:shadcnui"></span>ShadCN</li>
-					<li><span class="iconify" data-icon="logos:jquery"></span>JQuery</li>
-					<li><span class="iconify" data-icon="logos:css-3"></span>CSS3</li>
-					<li><span class="iconify" data-icon="logos:html-5"></span>HTML5</li>
+					<li><span class="iconify" data-icon="devicon:figma"></span>Figma</li>
 				
 				</ul>
 			</div>
