--- a/index.html
+++ b/index.html
@@ -93,12 +93,14 @@ I take pride in writing thoughtful code—and being a reliable teammate who brin
 
 					
 					<li><span class="iconify" data-icon="logos:jquery"></span>JQuery</li>
-					<li><span class="iconify" data-icon="logos:css-3"></span>CSS3</li>
 					<li><span class="iconify" data-icon="logos:d3"></span>D3</li>
+					<li><span class="iconify" data-icon="logos:css-3"></span>CSS3</li>
 					<li><span class="iconify" data-icon="logos:html-5"></span>HTML5</li>
 					<li><span class="iconify" data-icon="simple-icons:mui"></span>MUI</li>
 					<li><span class="iconify" data-icon="logos:tailwindcss-icon"></span>TailwindCSS</li>
 					<li><span class="iconify" data-icon="simple-icons:shadcnui"></span>ShadCN</li>
+					<li><span class="iconify" data-icon="logos:bootstrap"></span>Bootstrap</li>
+					<li><span class="iconify" data-icon="devicon:jira"></span>Jira</li>
 					<li><span class="iconify" data-icon="devicon:figma"></span>Figma</li>
 				
 				</ul>
