--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<h1>Justin K Lee</h1>
 				<section>
 					<header>
-						<h4>Full‑Stack Engineer with more than four years of experience building real-world products in agile, collaborative team environments.
+						<h4>Full‑Stack Engineer with more than four years of experience building enterprise-level internal business systems in agile, collaborative team environments.
 Nature hiker, museum wanderer, and lifelong learner at heart</h4>
 					</header>
 				</section>
@@ -45,11 +45,11 @@ Nature hiker, museum wanderer, and lifelong learner at heart</h4>
 				<h2>Who I am</h2>
 			</header>
 			<div class="content">
-				<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I’m a Full‑Stack Developer with more than four years of professional experience contributing to scalable web applications as part of agile, cross-functional teams. I enjoy solving complex problems with clean, efficient code, and continuously explore new technologies to improve development processes and user experience.
+				<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I’m a Full‑Stack Developer with more than four years of professional experience contributing to scalable enterprise systems as part of agile, cross-functional teams. I enjoy solving complex problems with clean, efficient code, and continuously explore new technologies to improve development processes and user experience.
 
-Outside of work, I recharge by spending time with family, hiking scenic trails, and visiting museums wherever I travel. These moments help me stay curious, grounded, and creatively inspired.
+I take pride in writing thoughtful code—and being a reliable teammate who brings positive energy to every project.</p><p>Outside of work, I recharge by spending time with family, hiking scenic trails, and visiting museums wherever I travel. These moments help me stay curious, grounded, and creatively inspired.
 
-I take pride in writing thoughtful code—and being a reliable teammate who brings positive energy to every project.
+
 				</p>
 				<span class="image main"><img src="images/pic5.JPG" alt="Justin in India" /></span>
 			</div>
@@ -226,7 +226,7 @@ A fully responsive, single-page e‑commerce application designed for premium mo
 					</li>
 					<li>
 						<h3>Address</h3>
-						<span>Vancouver/ San Francisco/ New York</span>
+						<span>Vancouver/ Seattle / San Francisco</span>
 					</li>
 					<li>
 						<ul class="icons">
