--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Nature hiker, museum wanderer, and lifelong learner at heart</h4>
 				<h2>Who I am</h2>
 			</header>
 			<div class="content">
-				<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I’m a Full‑Stack Developer with more than four years of professional experience contributing to scalable enterprise systems as part of agile, cross-functional teams. I enjoy solving complex problems with clean, efficient code, and continuously explore new technologies to improve development processes and user experience.
+				<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I’m a Full‑Stack Developer with more than four years of professional experience contributing to scalable internal business systems as part of agile, cross-functional teams. I enjoy solving complex problems with clean, efficient code, and continuously explore new technologies to improve development processes and user experience.
 
 I take pride in writing thoughtful code—and being a reliable teammate who brings positive energy to every project.</p><p>Outside of work, I recharge by spending time with family, hiking scenic trails, and visiting museums wherever I travel. These moments help me stay curious, grounded, and creatively inspired.
 
