update website text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Nature hiker, museum wanderer, and lifelong learner at heart</h4>
 			<div class="content">
 				<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I’m a Full‑Stack Developer with more than four years of professional experience contributing to scalable internal business systems as part of agile, cross-functional teams. I enjoy solving complex problems with clean, efficient code, and continuously explore new technologies to improve development processes and user experience.
 
-I take pride in writing thoughtful code—and being a reliable teammate who brings positive energy to every project.</p><p>Outside of work, I recharge by spending time with family, hiking scenic trails, and visiting museums wherever I travel. These moments help me stay curious, grounded, and creatively inspired.
+</p><p>Outside of work, I recharge by spending time with family, hiking scenic trails, and visiting museums wherever I travel. These moments help me stay curious, grounded, and creatively inspired.
 
 
 				</p>
@@ -222,7 +222,7 @@ A fully responsive, single-page e‑commerce application designed for premium mo
 					</li>
 					<li>
 						<h3>Phone</h3>
-						<span>(604)808-7577</span>
+						<span>(672)380-1567</span>
 					</li>
 					<li>
 						<h3>Address</h3>
