style for larger screen

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<h1>Justin K Lee</h1>
 				<section>
 					<header>
-						<h4>Full‑Stack Engineer with more than four years of experience building scalable internal business systems in agile, collaborative team environments.
+						<h4 class="mainMessage">Full‑Stack Engineer with more than four years of experience building scalable internal business systems in agile, collaborative team environments.
 Nature hiker, museum wanderer, and lifelong learner at heart</h4>
 					</header>
 				</section>
