--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 				<h1>Justin K Lee</h1>
 				<section>
 					<header>
-						<h4 class="mainMessage">Full‑Stack Engineer with more than four years of experience building scalable internal business systems in agile, collaborative team environments.
-Nature hiker, museum wanderer, and lifelong learner at heart</h4>
+						<h4 class="mainMessage">Full‑Stack Engineer with more than four years of experience building scalable internal business systems in agile, collaborative team environments. Eager about AI and emerging tech and always exploring what’s next. Nature hiker, museum wanderer, and lifelong learner at heart.</h4>
 					</header>
 				</section>
 				<ul class="actions">
@@ -45,7 +44,7 @@ Nature hiker, museum wanderer, and lifelong learner at heart</h4>
 				<h2>Who I am</h2>
 			</header>
 			<div class="content">
-				<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I’m a Full‑Stack Developer with more than four years of professional experience contributing to scalable internal business systems as part of agile, cross-functional teams. I enjoy solving complex problems with clean, efficient code, and continuously explore new technologies to improve development processes and user experience.
+				<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I’m a Full‑Stack Developer with more than four years of professional experience contributing to scalable internal business systems as part of agile, cross-functional teams. I enjoy solving complex problems with clean, efficient code. I’m especially drawn to AI and emerging technologies and bring that curiosity into my work—exploring new tools and patterns to improve development processes and user experience.
 
 </p><p>Outside of work, I recharge by spending time with family, hiking scenic trails, and visiting museums wherever I travel. These moments help me stay curious, grounded, and creatively inspired.
 
