remove no need code

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					</header>
 				</section>
 				<ul class="actions">
-					<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
+					<li><a href="#first" class="arrow"><span class="label">Next</span></a></li>
 				</ul>
 			</header>
 			<div class="content">
@@ -248,11 +248,6 @@ A fully responsive, single-page e‑commerce application designed for premium mo
 	</div>
 
 	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
 
 </body>
