remove font awesome

--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@ A fully responsive, single-page e‑commerce application designed for premium mo
 					<li>
 						<ul class="icons">
 							<li>LinkedIn <a target="_blank" href="https://www.linkedin.com/in/justinklee215/" rel="noopener"
-									class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									class="icon brands" aria-label="LinkedIn"><span class="iconify" data-icon="simple-icons:linkedin" data-width="1.25rem" data-height="1.25rem" aria-hidden="true"></span><span class="label">LinkedIn</span></a></li>
 							<li>GitHub <a target="_blank" href="https://github.com/DevNeoLee" rel="noopener"
-									class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									class="icon brands" aria-label="GitHub"><span class="iconify" data-icon="simple-icons:github" data-width="1.25rem" data-height="1.25rem" aria-hidden="true"></span><span class="label">GitHub</span></a></li>
 							<li>AngelList <a target="_blank" href="https://angel.co/justinklee215" rel="noopener"
-									class="icon brands fa-angellist"><span class="label">AngelList</span></a></li>
+									class="icon brands" aria-label="AngelList"><span class="iconify" data-icon="logos:angellist" data-width="1.25rem" data-height="1.25rem" aria-hidden="true"></span><span class="label">AngelList</span></a></li>
 						</ul>
 					</li>
 				</ul>
