update for llm update on travel_data app

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link rel="preconnect" href="https://code.iconify.design" />
+	<link rel="preload" as="image" href="images/pic4.jpg" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
@@ -165,11 +166,11 @@ A fully responsive, single-page e‑commerce application designed for premium mo
 
 				<section>
 					<header>
-						<h3>Travelers to Canada</h3>
-						<p class="paragraph">A fully interactive data visualization dashboard built with TypeScript, D3.js (v7), and Vite, designed to showcase 20 years of Canadian tourism statistics within a single, responsive web page. Utilizing modern web standards and best practices—including modular TypeScript architecture, CSS Grid and Flexbox layouts, and scalable SVG graphics—the application offers a seamless user experience where key insights such as bar charts, pie charts, maps, and interactive controls are immediately accessible.</p>
+						<h3>Travelers to Canada AI</h3>
+						<p class="paragraph">A fully interactive data visualization dashboard built with TypeScript, D3.js (v7), and Vite, designed to showcase 20 years of Canadian tourism statistics within a single, responsive web page. The app combines modern web standards—modular TypeScript architecture, CSS Grid and Flexbox, scalable SVG graphics—with *AI-powered chat so users can ask questions about the data and get answers even when offline.</p>
 
-<p>Technical highlights include advanced D3.js charting techniques (including threshold, linear, and square-root scales), real-time data filtering, and a robust, maintainable codebase reinforced by strict linting and strong type safety..</p>
-					</header>
+<p>LLM and prompting are central to the experience: when online, the Groq API answers with rich, contextual responses; when *offline or as a fallback, a mini LLM runs entirely in the *browser using transformers.js (no server required, model cached after first load). Careful prompting—system instructions, dataset context injected by year/month, and routing of casual vs. data questions—ensures the assistant uses only the app’s filtered dataset for statistics and stays friendly for greetings and follow-ups. Technical highlights include advanced D3.js charting (threshold, linear, and square-root scales), real-time data filtering, and a maintainable codebase with strict linting and strong type safety.</p>
+	</header>
 					<div class="content">
 						<div class="project-image">
 							<a href="https://d3-canada-tourist2025.vercel.app" target="_blank" rel="noopener">
