--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 				<h2>Who I am</h2>
 			</header>
 			<div class="content">
-				<p><strong class="subheading">Full Stack Developer</strong> I’m a Full‑Stack Developer with more than four years of professional experience contributing to scalable internal business systems as part of agile, cross-functional teams. I enjoy solving complex problems with clean, efficient code. I’m especially drawn to AI and emerging technologies and bring that curiosity into my work—exploring new tools and patterns to improve development processes and user experience.
+				<p><strong class="subheading">Full Stack Developer</strong> I’m a Full‑Stack Developer with more than four years of professional experience contributing to scalable internal business systems as part of agile, cross-functional teams. I enjoy solving complex problems with clean, efficient code. My focus has evolved toward developing AI-powered applications, particularly those integrating Large Language Models (LLMs) into real-world systems.
+
+I design and implement LLM-driven features, automation workflows, and intelligent interfaces that transform traditional applications into adaptive, AI-enhanced platforms.
 
 </p><p>Outside of work, I recharge by spending time with family, hiking scenic trails, and visiting museums wherever I travel. These moments help me stay curious, grounded, and creatively inspired.
 
