update new skill set

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ I design and implement LLM-driven features, automation workflows, and intelligen
 					<li><span class="iconify" data-icon="logos:git-icon"></span>Git</li>
 					<li><span class="iconify" data-icon="logos:hugging-face-icon"></span>HuggingFace</li>
 					<li><span class="iconify" data-icon="simple-icons:ollama"></span>Ollama</li>
+					<li><span class="iconify" data-icon="logos:claude-icon"></span>Claude Code</li>
 
 					
 					<li><span class="iconify" data-icon="logos:jquery"></span>JQuery</li>
@@ -237,8 +238,7 @@ A fully responsive, single-page e‑commerce application designed for premium mo
 									class="icon brands" aria-label="LinkedIn"><span class="iconify" data-icon="simple-icons:linkedin" data-width="1.25rem" data-height="1.25rem" aria-hidden="true"></span><span class="label">LinkedIn</span></a></li>
 							<li>GitHub <a target="_blank" href="https://github.com/DevNeoLee" rel="noopener"
 									class="icon brands" aria-label="GitHub"><span class="iconify" data-icon="simple-icons:github" data-width="1.25rem" data-height="1.25rem" aria-hidden="true"></span><span class="label">GitHub</span></a></li>
-							<li>AngelList <a target="_blank" href="https://angel.co/justinklee215" rel="noopener"
-									class="icon brands" aria-label="AngelList"><span class="iconify" data-icon="logos:angellist" data-width="1.25rem" data-height="1.25rem" aria-hidden="true"></span><span class="label">AngelList</span></a></li>
+
 						</ul>
 					</li>
 				</ul>
